--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = nodemcu-32s
+
 [env]
-monitor_raw = true
+monitor_raw = yes
 monitor_speed = 115200
 
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
 framework = espidf
+upload_speed = 921600
